# igame

./: README  beta.tar  index.html
src/: CMakeLists.txt  COPYING  LICENSE.txt  MItem.h  MItemPainter.hxx  MScene.h  MSplashScreen.h  MWidget.h  MosQt  demoUiXml.clean.sh  demoUiXml.cpp  demoUiXml.make_freebsd.sh  demoUiXml.make_linux.sh  demoUiXml.make_win.sh  demoUiXml.pro  demoUiXml.run_win.sh  demoUiXml.session  demoUiXml.ui.xml  iGaME.clean.sh  iGaME.cpp  iGaME.make_freebsd.sh  iGaME.make_linux.sh  iGaME.make_win.sh  iGaME.rc  iGaME.run_linux.sh  iGaME.run_win.sh  iGaME.session
src/BUILDE/docs/: help.txt
src/BdInterface/: .bdbInterface.cpp.swp  BdInterface.odt  CMakeLists.txt  bdbInterface.cpp  bdbInterface.h
src/BdInterface/dataGen/: a.xml  dataWrite.cpp
src/BdInterface/database/: litre_per_mole_per_second.xml
src/BdInterface/database/Compartment/: E.coli.xml  Flask.xml  Mitochondrion.xml
src/BdInterface/database/Predef/: input.xml  listOfFunctionDefinitions.xml
src/BdInterface/database/Species/: placI185lacI153_4.xml
src/BdInterface/database/global/: units.xml
src/BdInterface/database/module/: lacI153.xml  test3.xml  test4.xml
src/BdInterface/database/reaction/: bid_IPTG_lacI153_4.xml  bid_pcIlam189_cIlam156_2.xml  bid_placI185_lacI153_4.xml  bid_ptetR187_tetR154_2.xml  dmr_cIlam156_prot.xml  dmr_lacI153_2.xml  dmr_lacI153_prot.xml  dmr_tetR154_prot.xml
src/BdInterface/database/species/: IPTG.xml  IPTGlacI153_4.xml  cIlam156_dimer.xml  cIlam156_prot.xml  lacI153_dimer.xml  lacI153_prot.xml  lacI153_tetramer.xml  pcIlam189_dna.xml  pcIlam189cIlam156_2.xml  placI185_dna.xml  placI185lacI153_4.xml  ptetR187_dna.xml  ptetR187tetR154_2.xml  tetR154_dimer.xml  tetR154_prot.xml
src/BdInterface/parser/: parser.l  parser.y  y.tab.h
src/BdInterface/test/: bdbInterfaceTest.cpp  bdbInterfaceTest.h
src/CMakeModules/: CustomModules.cmake  Find_functions.cmake  Findcopasi.cmake  Finddbxml.cmake  Findqwt.cmake  Findsbml.cmake
src/Docs/: docUiXml.yaml  odeSolver参数设置.txt  readme.yaml  ui-design.txt  关键的数据结构
src/Docs/igame/: 100.session  128100  128100.diagram  129252  129252.diagram  130404.diagram  igame.prj
src/ExternalCode/: CMakeLists.txt
src/ExternalCode/SBML_odeSolver-1.6.0/: CMakeLists.txt
src/ExternalCode/SBML_odeSolver-1.6.0/odeSolver/: 01.xml  BIOMD0000000001.xml  BIOMD0000000005.xml  BIOMD00000005-v4.xml  Makefile  cscope.files  cscope.out  sbml-l2v4.xsd~  tags
src/ExternalCode/SBML_odeSolver-1.6.0/src/: CMakeLists.txt  Makefile  cvodeSolver.c  drawGraph.c  libODES.pc  modelSimplify.c  odeConstruct.c  odeModel.c  odeSolver.c  sbml.c  sbmlResults.c
src/ExternalCode/copasi-32-src/: CMakeLists.txt  build_problem.txt
src/ExternalCode/copasi-32-src/copasi/: FlexLexer.h  blas.h  blaswrap.h  clapackwrap.h  copasi.h  copasilicense.h  copasiversion.h  lapack.h  mathematics.h
src/ExternalCode/raptor-1.4.19/src/: raptor_config.h
src/ExternalCode/sbml/: Constraint.h  Species.h  SpeciesReference.h
src/ExternalCode/sbml-3.4.1/sbml/: Compartment.h  CompartmentType.h  Constraint.h  Delay.h  Event.h  EventAssignment.h  FunctionDefinition.h  (+28 more)
src/QwtPlot/: CMakeLists.txt  cscope.files  cscope.out  data_plot.cpp  data_plot.h  plotInputData.cpp  plotInputData.h  plotToolWidget.cpp  plotToolWidget.h  tags
src/core/: CMakeLists.txt  CoreException.cpp  CoreException.h  StrCacuException.h  chain.cpp  chain.h  cscope.files  cscope.out  driver.cpp  driver.h  g_i.h  globalSetting.cpp  imath.cpp  imath.h  key  main.cpp  mycompartment.cpp  mycompartment.h  myreaction.cpp  myreaction.h  mysbmldoc.cpp  mysbmldoc.h  myspecies.cpp  myspecies.h  node.cpp  node.h  part.cpp  part.h  reactionTemplate.cpp  reactionTemplate.h  readDataBase.cpp  readDataBase.h  readInput.cpp  readInput.h  readXMLComponent.cpp  readXMLComponent.h  tags  tree.cpp  tree.h
src/core/copsiPlot/: CMakeLists.txt  CopsiInterface.h  main.cpp
src/core/main/: main.cpp
src/core/plotTest/: integrate.cpp  integrate.h  plot_main.cpp
src/core/strcacu/: CMakeLists.txt  Makefile  Makefile~  StrCacuException.cpp  cacu  cacu.l  cacu.y  cacu_main.cpp  cacu_main.h  cacu_main.h.gch  caculex.c  cacuyac.c  cacuyac.h  cscope.files  cscope.out  str_cacu.cpp  str_cacu.h  str_cacu.h.gch  tags  tmp.cacu
src/igameUi/: CMakeLists.txt  cscope.files  cscope.out  main.cpp  mainWindow.cpp  mainWindow.h  mainWindow.ui  plot.ui  tags
src/igameUiMort/: BiobrickDataSet.ui  CMakeLists.txt  ClickableWidget.cpp  ClickableWidget.h  CommonScene.cpp  CommonScene.h  CompartDataSet.ui  FindCopasi.ui  GenModelThread.cpp  GenModelThread.h  IGAME.qrc  IdSelWidget.cpp  IdSelWidget.h  IdSelWidget.ui  InputGen.cpp  InputGen.h  ItemDataSetting.ui  MItem.cpp  MItem.h  MScene.cpp  MScene.h  MSplashScreen.cpp  MView.cpp  MView.h  MWidget.cpp  MainGraphicsView.cpp  MainGraphicsView.h  MainGraphicsView.ui  Makefile  MosQt  MosQt.session  OrderedScene.cpp  OrderedScene.h  PlasmidBackboneSet.ui  RotateWidget.cpp  RotateWidget.h  RuleDataEdit.ui  RuleDataSet.ui  RuleSet.ui  SceneManager.cpp  (+25 more)
src/igameUiMort/demoUi/: demoUiXml.cpp
src/igameUiMort/demoUiXml-build-desktop/: Makefile  demoUiXml  moc_MScene.cpp  moc_MSplashScreen.cpp  moc_MView.cpp  moc_MWidget.cpp
src/igameUiMort/iGaME-build-desktop/: Makefile  iGaME  moc_MScene.cpp  moc_MSplashScreen.cpp  moc_MView.cpp  moc_MWidget.cpp
src/igameUiMort/igameUiMain/: igameUiMain.cpp
src/igameUiMort/xml/: backbone.ui.xml  biobrick.ui.xml  compartment.ui.xml  compartment.xml  compound.ui.xml  new-compartment.ui.xml  new-species.ui.xml  plasmidhead.ui.xml  scene-backbone.ui.xml  scene-compartment.ui.xml  species.ui.xml  trash.ui.xml
src/tools/: CMakeLists.txt
src/tools/dbparser/: Makefile  README.txt  genXml.c  genXml.h  genXml.h.gch  mglyac.y  parser.l  parser.y  parserlex.c  parseryac.c  parseryac.h  tags  test.xml  test1.in  tran_fromula  trans.cpp  trans.h
src/tools/tran_formula/: CMakeLists.txt  in.txt  trans.cpp
src/utility/: CMakeLists.txt  DebugOut.cpp  DebugOut.h  GlobalSetting.cpp  GlobalSetting.h  cheat.h  globalSetting.cpp  libsbml-401-wrapper.cpp  libsbml-401-wrapper.h
(+1235 files in other folders)
