SET(LIBRARY_OUTPUT_PATH ${EXECUTABLE_OUTPUT_PATH})

#source file
FILE( GLOB PRO_CORE_HDRS *.h )
FILE( GLOB PRO_CORE_SRC *.cpp )

QT4_WRAP_CPP( PRO_CORE_MOC ${PRO_CORE_HDRS} )
#QT4_WRAP_CPP( PRO_MOC_CPP ${PRO_MOC_FILE})

ADD_LIBRARY( plot
	STATIC
	${PRO_CORE_MOC}
	${PRO_CORE_SRC}
	)

TARGET_LINK_LIBRARIES( plot
  ${QT_LIBRARIES}
  )
