SET(LIBRARY_OUTPUT_PATH ${EXECUTABLE_OUTPUT_PATH})

#source file
FILE( GLOB PRO_CORE_HDRS *.h )
FILE( GLOB PRO_CORE_CPP_SRC *.cpp )
FILE( GLOB PRO_CORE_C_SRC *.c )
FILE( GLOB PRO_DSG_FILE *.ui )
FILE( GLOB PRO_RESOURCE_SRC *.qrc )

QT4_WRAP_UI( PRO_QDSG_HDR ${PRO_DSG_FILE})
QT4_WRAP_CPP( PRO_CORE_MOC ${PRO_CORE_HDRS} )
QT4_ADD_RESOURCES( PRO_RESOURCE ${PRO_RESOURCE_SRC} )
#QT4_WRAP_CPP( PRO_MOC_CPP ${PRO_MOC_FILE})

INCLUDE_DIRECTORIES( BEFORE
	${IGAME_BINARY_DIR}/igameUi
	)

ADD_EXECUTABLE( igameUi
	${PRO_CORE_MOC}
	${PRO_CORE_CPP_SRC}
	${PRO_CORE_C_SRC}
	${PRO_QDSG_HDR}
	${PRO_RESOURCE}
	)

TARGET_LINK_LIBRARIES( igameUi
  ${QT_LIBRARIES}
  bdinterface
  dbxml
  core
  utility
  )
  #copsi_wrapper 

INSTALL_PROJECT( igameUi )
